# linkhut-lib

./: .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
devtools/: lint.py
docs/: development.md
notebooks/: scratch.ipynb
src/linkhut_lib/: __init__.py  config.py  exceptions.py  linkhut_lib.py  models.py  test.ipynb  utils.py  validation.py
tests/: __init__.py  _helpers.py  conftest.py  test_create_bookmark.py  test_delete_bookmark.py  test_delete_tag.py  test_get_bookmarks.py  test_get_reading_list.py  test_rename_tag.py  test_smoke.py  test_update_bookmark.py  test_upsert_bookmark.py
